--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -11,7 +11,7 @@ en:
     error_notification:
       default_message: "Please review the problems below:"
     # Labels and hints examples
-    # labels:
+    labels:
     #   defaults:
     #     password: 'Password'
     #   user:
@@ -19,6 +19,11 @@ en:
     #       email: 'E-mail to sign in.'
     #     edit:
     #       email: 'E-mail.'
+      datum:
+        effective_at: 'Date/Time'
+        datumType: 'Data Type'
+        submit: 'Create Point'
+
     # hints:
     #   defaults:
     #     username: 'User name to sign in.'
